ensured that the form looks nice on mobile and screen

--- a/css/layout.css
+++ b/css/layout.css
@@ -32,3 +32,8 @@
     width: 50%;
   }
 }
+
+.column {
+  display: flex;
+  flex-direction: column;
+}
